[package]
name = "day05"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
polars = { version = "0.35.4", features = ["lazy", "temporal", "describe", "json", "parquet", "dtype-datetime"]}
rayon = "1.8.0"
